compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__private_internal_const.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1046
expression: "\n@internal\nconst wibble = 1\n"
snapshot_kind: text
---
----- SOURCE CODE

@internal
const wibble = 1


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @internal
  │ ^^^^^^^^^ Redundant internal attribute

Only a public definition can be annotated as internal.
Hint: Remove the `@internal` annotation.
